@@ -7,6 +7,7 @@ Version 1.0 to be released
 - Refactored UserIdentity generated by yiic webapp (Qiang)
 - Added hashByName option to asset manager (Qiang)
 - Fixed a bug in CHtml::dropDownList() which doesn't render the 'name' attribute (Qiang)
+- Added CHtml::openTag and CHtml::closeTag (Qiang)
 
 Version 1.0rc November 10, 2008
 -------------------------------
